ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.3
    • Affects Version/s: 4.1.1
    • Component/s: Storage
    • Fully Compatible
    • ALL
    • Storage Engines 2018-08-27
    • 15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We are seeing multiple evergreen failures with following assertion failure during a collection Validate on a secondary in a replica set.

      [ReplicaSetFixture:job0:secondary] 2018-08-06T18:09:24.083+0000 D -        [conn283] User Assertion: Overflow: Invalid advance (1) past end of buffer[0] at offset: 0 src/mongo/util/bufreader.h 109
      [ValidateCollections:job0:jstestfuzz-3c61-ent_94e1-qa_a6ce-1533653374890-044:ValidateCollections] 2018-08-07T15:06:59.231+0000 	"errors" : [
      [ValidateCollections:job0:jstestfuzz-3c61-ent_94e1-qa_a6ce-1533653374890-044:ValidateCollections] 2018-08-07T15:06:59.231+0000 		"exception during index validation: Overflow: Invalid advance (1) past end of buffer[0] at offset: 0"

      This failure looks related to recent changes in the unique index format.

            Assignee:
            Neha Khatri (Inactive)
            Reporter:
            Neha Khatri (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: