SERVER-36568 Avoid unique index upgrade at secondary on an empty collMod with FCV=4.0.

An empty collMod is used to upgrade unique index during FCV upgrade. If an application
issues an empty collMod when FCV is not upgrading or upgraded to 4.2 then the unique
index should not be upgraded due to this collMod on the secondary.